--- a/wp-content/themes/caos-child/style.css
+++ b/wp-content/themes/caos-child/style.css
@@ -6,6 +6,14 @@ Template: caos
 Version: 0.1.0
 */
 
+
+/*police*/
+@font-face {
+    font-family: "Extros Backstage";
+    font-weight: bold;
+    src: url('extros/Extros-Backstage.ttf');
+}
+
 /*footer*/
 .sub-footer{
     padding-top: 0;
@@ -46,6 +54,30 @@ h3.sous-titre-site{
 
 /*page d'accueil */
 
-.textimg{
-    color:black;
+a.textimg{
+color:white;
+    position: relative;
+    bottom: 18vh;
+    font-size:19px;
+    font-family: "Extros Backstage";
+    text-decoration: none;
 }
+
+h2.titre-service{
+    font-size:36px;
+    color: black;
+    font-family: "Extros Backstage";
+    text-align: center;
+    height: 70px;
+}
+
+.bloc-services{
+height: 285px;
+}
+.content-services{
+    height: 215px;
+}
+.bloc-realisations{
+    height:490px;
+}
+
